--- a/res/layout/da_items.xml
+++ b/res/layout/da_items.xml
@@ -31,8 +31,9 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/item_icon"
         android:layout_alignLeft="@+id/item_Nametv"
-        android:text=""
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+        android:text="Discount ="
+        android:textAppearance="?android:attr/textAppearanceSmall" 
+        android:textColor="@color/blue1"/>
 
     <TextView
         android:id="@+id/item_Pricetv"
